# Boomerang

./: .gitignore  DOCUMENTATION.md  PROJECT_ANALYSIS.md  QWEN.md  app.py  config.py  final_verification.py  fix_strategies.py  pyproject.toml  requirements.txt  strategy_showcase_app.py  test_alignment.py
Long_Term_Strategy/: dca_investing.py  dividend_investing.py  growth_investing.py  index_etf_investing.py  value_investing.py
agents/: analyst_agent.py  execution_agent.py  insider_agent.py  llm_analyst_agent.py  macro_agent.py  macroeconomics_indicator.py  orchestrator.py  recommender_agent.py  report_agent.py  screener_agent.py  sector_agent.py  sentiment_agent.py  social_media_sentiment.py  stock_picker_agent.py  yfinance_agent.py
dashboard/: app.py
notebooks/: stock_backtesting.py
pages/: 1_📈_Market_Overview.py  2_🔬_Deep_Dive_Analysis.py  3_📊_Strategy_Backtester.py  3_🔄_Combination_Builder.py  3_🛠️_Portfolio_Builder.py  4_💬_AI_Consultant.py  4_📈_Results.py  5_💸_Paper_Trading.py
quant-company-insights-agent/: api_server.py  config.yaml  main.py  pyproject.toml  requirements.txt
quant-company-insights-agent/data/: SME_EQUITY_L.csv
scripts/: generate_us_stock_list.py
src/ai/: dev.ts
src/ai/flows/: answer-stock-query.ts  improve-stock-query.ts  summarize-stock-data.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: app-header.tsx  chat-panel.tsx  explainability-card.tsx  stock-chart.tsx  stockflow-logo.tsx  theme-toggle.tsx
src/lib/: data.ts
strategies/: breakout_strategy.py  channel_trading.py  custom_strategy.py  ema_crossover.py  macd_strategy.py  mcd_strategy.py  mean_inversion.py  momentum_strategy.py  pairs_trading.py  pullback_fibonacci.py  requirements.txt  reversal_strategy.py  rsi_strategy.py  sma_crossover.py  strategy_adapter.py  support_resistance.py
utils/: config_loader.py  data_loader.py  market_scraper.py  moneycontrol_scraper.py  news_fetcher.py  portfolio_engine.py  risk_metrics.py  validation.py  visualization.py
