[project]
name = "boomerang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "lxml>=6.0.1",
    "nltk>=3.9.1",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "requests>=2.32.5",
    "selenium>=4.35.0",
    "streamlit>=1.49.1",
    "ta>=0.11.0",
    "webdriver-manager>=4.0.2",
    "yfinance>=0.2.65",
    "pyyaml",
    "alpaca>=1.0.0",
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "numpy>=2.3.2",
    "scikit-learn>=1.7.1",
    "matplotlib>=3.10.6",
    "pydantic>=2.11.7",
    "alpaca-trade-api>=0.26",
    "google-generativeai>=0.8.5",
    "alpaca-py>=0.42.1",
    "fredapi>=0.5.2",
    "backtesting>=0.6.5",
    "praw>=7.8.1",
    "torch>=2.8.0",
    "transformers>=4.56.0",
    "nsetools>=2.0.1",
    "pytz>=2025.2",
    "nsepython>=2.97",
    "asttokens==3.0.0",
    "decorator==5.2.1",
    "executing==2.2.1",
    "ipython==9.5.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "matplotlib-inline==0.1.7",
    "parso==0.8.5",
    "prompt-toolkit==3.0.52",
    "pure-eval==0.2.3",
    "pygments==2.19.2",
    "quantstats==0.0.77",
    "seaborn==0.13.2",
    "stack-data==0.6.3",
    "streamlit-option-menu==0.4.0",
    "tabulate==0.9.0",
    "traitlets==5.14.3",
    "wcwidth==0.2.13",
    "openai>=2.3.0",
    "mplfinance>=0.12.10b0",
    "empyrical-reloaded>=0.5.12",
]
